--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ message_queue_window.txt
 reasoning_content.txt
 reasoning_content.bat
 reasoning_window.bat
+queue_update.txt
 
 
 # Byte-compiled / optimized / DLL files
