--- a/env.example
+++ b/env.example
@@ -17,6 +17,8 @@ CHAT_ANY_WHERE_KEY=
 SILICONFLOW_KEY=
 CHAT_ANY_WHERE_BASE_URL=https://api.chatanywhere.tech/v1
 SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1/
+DEEP_SEEK_KEY=
+DEEP_SEEK_BASE_URL=https://api.deepseek.com/v1
 
 
 
