--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ reasoning_content.txt
 reasoning_content.bat
 reasoning_window.bat
 queue_update.txt
+memory_graph.gml
 
 
 # Byte-compiled / optimized / DLL files
