mongodb支持配置用户名密码，向下兼容

--- a/env.example
+++ b/env.example
@@ -11,6 +11,9 @@ PLUGINS=["src2.plugins.chat"]
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
 DATABASE_NAME=MegBot
+MONGODB_USERNAME = ""  # 默认空值
+MONGODB_PASSWORD = ""  # 默认空值
+MONGODB_AUTH_SOURCE = ""  # 默认空值
 
 #key and url
 CHAT_ANY_WHERE_KEY=
