--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -25,6 +28,7 @@ jobs:
         with:
           context: .    # Docker构建上下文路径
           file: ./Dockerfile  # Dockerfile路径
+          platforms: linux/amd64,linux/arm64  # 支持arm架构
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/maimbot:${{ github.ref_name }}
             ${{ secrets.DOCKERHUB_USERNAME }}/maimbot:latest
