--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ mongodb/
 NapCat.Framework.Windows.Once/
 log/
 src/plugins/memory
-src/plugins/chat/bot_config.toml
+config/bot_config.toml
 /test
 message_queue_content.txt
 message_queue_content.bat
