--- a/config/bot_config.toml
+++ b/config/bot_config.toml
@@ -1,5 +1,5 @@
 [bot]
-qq = 123456  #填入你的机器人QQ
+qq = 123  #填入你的机器人QQ
 nickname = "麦麦"  #你希望bot被称呼的名字
 
 [message]
@@ -17,7 +17,7 @@ enable_pic_translate = false
 
 [response]
 api_using = "siliconflow" # 选择大模型API，可选值为siliconflow,deepseek，建议使用siliconflow，因为识图api目前只支持siliconflow的deepseek-vl2模型
-api_paid = false #是否使用付费api，目前此选项只影响siliconflow，其deepseek模型的api分为可用赠送余额和不可以用的，此选项为false时使用赠送余额
+api_paid = true #是否使用付费api，目前此选项只影响siliconflow，其deepseek模型的api分为可用赠送余额和不可以用的，此选项为false时使用赠送余额
 model_r1_probability = 0.8 # 麦麦回答时选择R1模型的概率
 model_v3_probability = 0.1 # 麦麦回答时选择V3模型的概率
 model_r1_distill_probability = 0.1 # 麦麦回答时选择R1蒸馏模型的概率
@@ -34,13 +34,14 @@ enable_advance_output = true # 开启后输出更多日志,false关闭true开启
 [groups]
 
 talk_allowed = [
-    123456,12345678
+    123, 
+    123, 
 ]  #可以回复消息的群
 
 talk_frequency_down = [
-    123456,12345678
+
 ]  #降低回复频率的群
 
 ban_user_id = [
-     123456,12345678
+
 ]  #禁止回复消息的QQ号
