--- a/config/bot_config.toml
+++ b/config/bot_config.toml
@@ -3,59 +3,71 @@ qq = 123
 nickname = "麦麦"
 
 [message]
-min_text_length = 2
-max_context_size = 15
-emoji_chance = 0.2
+min_text_length = 2 # 与麦麦聊天时麦麦只会回答文本大于等于此数的消息
+max_context_size = 15 # 麦麦获得的上下文数量，超出数量后自动丢弃
+emoji_chance = 0.2 # 麦麦使用表情包的概率
 
 [emoji]
-check_interval = 120
-register_interval = 10
+check_interval = 120 # 检查表情包的时间间隔
+register_interval = 10 # 注册表情包的时间间隔
 
 [cq_code]
 enable_pic_translate = false
 
 [response]
-api_using = "siliconflow"
-api_paid = true
-model_r1_probability = 0.8
-model_v3_probability = 0.1
-model_r1_distill_probability = 0.1
+api_using = "siliconflow" # 使用的API "siliconflow" 或 "deepseek"
+api_paid = true # siliconflow有没有给钱 决定了能不能用siliconflow的部分付费模型
+model_r1_probability = 0.8 # 麦麦回答时选择R1模型的概率
+model_v3_probability = 0.1 # 麦麦回答时选择V3模型的概率
+model_r1_distill_probability = 0.1 # 麦麦回答时选择R1蒸馏模型的概率
 
 [memory]
-build_memory_interval = 300
+build_memory_interval = 300 # 记忆构建间隔 单位秒
 
 [others]
-enable_advance_output = true
+enable_advance_output = true # 是否启用高级输出
+enable_kuuki_read = true # 是否启用读空气功能
 
 [groups]
 talk_allowed = [
     123,
     123,
-]
-talk_frequency_down = []
-ban_user_id = []
+]  #可以回复消息的群
+talk_frequency_down = []  #降低回复频率的群
+ban_user_id = []  #禁止回复消息的QQ号
 
-[model.llm_reasoning]
+
+#V3
+#name = "deepseek-chat"
+#base_url = "DEEP_SEEK_BASE_URL"
+#key = "DEEP_SEEK_KEY"
+
+#R1
+#name = "deepseek-reasoner"
+#base_url = "DEEP_SEEK_BASE_URL"
+#key = "DEEP_SEEK_KEY"
+
+[model.llm_reasoning] #R1
 name = "Pro/deepseek-ai/DeepSeek-R1"
 base_url = "SILICONFLOW_BASE_URL"
 key = "SILICONFLOW_KEY"
 
-[model.llm_reasoning_minor]
+[model.llm_reasoning_minor] #R1蒸馏
 name = "deepseek-ai/DeepSeek-R1-Distill-Qwen-32B"
 base_url = "SILICONFLOW_BASE_URL"
 key = "SILICONFLOW_KEY"
 
-[model.llm_normal]
+[model.llm_normal] #V3
 name = "Pro/deepseek-ai/DeepSeek-V3"
 base_url = "SILICONFLOW_BASE_URL"
 key = "SILICONFLOW_KEY"
 
-[model.llm_normal_minor]
+[model.llm_normal_minor] #V2.5
 name = "deepseek-ai/DeepSeek-V2.5"
 base_url = "SILICONFLOW_BASE_URL"
 key = "SILICONFLOW_KEY"
 
-[model.vlm]
+[model.vlm] #图像识别
 name = "deepseek-ai/deepseek-vl2"
 base_url = "SILICONFLOW_BASE_URL"
 key = "SILICONFLOW_KEY"
