--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,6 @@
 HOST=127.0.0.1
 PORT=8080
 
-COMMAND_START=["/"]
-
 # 插件配置
 PLUGINS=["src2.plugins.chat"]
 
@@ -16,11 +14,11 @@ MONGODB_PASSWORD = ""  # 默认空值
 MONGODB_AUTH_SOURCE = ""  # 默认空值
 
 #key and url
-
 CHAT_ANY_WHERE_BASE_URL=https://api.chatanywhere.tech/v1
 SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1/
 DEEP_SEEK_BASE_URL=https://api.deepseek.com/v1
 
+#定义你要用的api的base_url
 DEEP_SEEK_KEY=
 CHAT_ANY_WHERE_KEY=
 SILICONFLOW_KEY=
