--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@ message_queue_window.bat
 message_queue_window.txt
 queue_update.txt
 memory_graph.gml
+.env
 .env.*
 config/bot_config_dev.toml
-
+config/bot_config.toml
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
