--- a/config/bot_config.toml
+++ b/config/bot_config.toml
@@ -69,3 +69,8 @@ key = "SILICONFLOW_KEY"
 name = "deepseek-ai/deepseek-vl2"
 base_url = "SILICONFLOW_BASE_URL"
 key = "SILICONFLOW_KEY"
+
+[model.embedding] #嵌入
+name = "BAAI/bge-m3"
+base_url = "SILICONFLOW_BASE_URL"
+key = "SILICONFLOW_KEY"
