--- a/config/bot_config_template.toml
+++ b/config/bot_config_template.toml
@@ -2,6 +2,13 @@
 qq = 123
 nickname = "麦麦"
 
+[personality]
+prompt_personality = [
+        "曾经是一个学习地质的女大学生，现在学习心理学和脑科学，你会刷贴吧",    # 贴吧人格 
+        "是一个女大学生，你有黑色头发，你会刷小红书"    # 小红书人格
+    ]
+prompt_schedule = "一个曾经学习地质,现在学习心理学和脑科学的女大学生，喜欢刷qq，贴吧，知乎和小红书"
+
 [message]
 min_text_length = 2 # 与麦麦聊天时麦麦只会回答文本大于等于此数的消息
 max_context_size = 15 # 麦麦获得的上下文数量，超出数量后自动丢弃
