--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ mongodb/
 NapCat.Framework.Windows.Once/
 log/
 /test
+/src/test
 message_queue_content.txt
 message_queue_content.bat
 message_queue_window.bat
