--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -25,8 +25,7 @@ body:
 - type: textarea
   attributes:
     label: 如何重现此问题？
-  validations:
-    required: true
+    placeholder: "若不知道请略过此问题"
 - type: textarea
   attributes:
     label: 可能造成问题的原因
