--- a/template.env
+++ b/template.env
@@ -1,10 +1,10 @@
 HOST=127.0.0.1
-PORT=8080
+PORT=8080   # 端口号，有需求可改
 
 # 插件配置
 PLUGINS=["src2.plugins.chat"]
 
-# 默认配置
+# 数据库配置
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
 DATABASE_NAME=MegBot
@@ -13,12 +13,25 @@ MONGODB_USERNAME = ""  # 默认空值
 MONGODB_PASSWORD = ""  # 默认空值
 MONGODB_AUTH_SOURCE = ""  # 默认空值
 
+# 以上内容如看不懂，保持默认即可
+
+# 以下为API配置,你可以在这里定义你的密钥和base_url
+# 你可以选择定义其他服务商提供的KEY，完全可以自定义
+
 #key and url
+# 定义你要用的api的base_url
 CHAT_ANY_WHERE_BASE_URL=https://api.chatanywhere.tech/v1
 SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1/
 DEEP_SEEK_BASE_URL=https://api.deepseek.com/v1
+# 你也可以自定义所需平台的base_url
+# 举例：
+# MODEL_NAME_BASE_URL=https://api.example.com/v1
 
-#定义你要用的api的base_url
+
+#定义你要用的api的API-KEY
 DEEP_SEEK_KEY=
 CHAT_ANY_WHERE_KEY=
 SILICONFLOW_KEY=
+# 你也可以自定义所需平台的API-KEY
+# 举例：
+# MODEL_NAME_KEY=
