--- a/templete/bot_config_template.toml
+++ b/templete/bot_config_template.toml
@@ -37,6 +37,11 @@ max_response_length = 1024 # 麦麦回答的最大token数
 build_memory_interval = 300 # 记忆构建间隔 单位秒
 forget_memory_interval = 300 # 记忆遗忘间隔 单位秒
 
+[mood]
+mood_update_interval = 1.0 # 情绪更新间隔 单位秒
+mood_decay_rate = 0.95 # 情绪衰减率
+mood_intensity_factor = 1.0 # 情绪强度因子
+
 [others]
 enable_advance_output = true # 是否启用高级输出
 enable_kuuki_read = true # 是否启用读空气功能
