--- a/config/bot_config_template.toml
+++ b/config/bot_config_template.toml
@@ -1,6 +1,6 @@
 [bot]
 qq = 123
-nickname = "麦麦"        # 可自定义
+nickname = "麦麦"
 
 [personality]
 prompt_personality = [
@@ -25,9 +25,9 @@ register_interval = 10 # 注册表情包的时间间隔
 enable_pic_translate = false
 
 [response]
-model_r1_probability = 0.8 # 麦麦回答时选择R1模型(即[model.llm_reasoning]指定的模型)的概率
-model_v3_probability = 0.1 # 麦麦回答时选择V3模型(即[model.llm_normal]指定的模型)的概率
-model_r1_distill_probability = 0.1 # 麦麦回答时选择R1蒸馏模型(即[model.llm_reasoning_minor]指定的模型)的概率
+model_r1_probability = 0.8 # 麦麦回答时选择R1模型的概率
+model_v3_probability = 0.1 # 麦麦回答时选择V3模型的概率
+model_r1_distill_probability = 0.1 # 麦麦回答时选择R1蒸馏模型的概率
 
 [memory]
 build_memory_interval = 300 # 记忆构建间隔 单位秒
