--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -17,6 +17,11 @@ prompt_schedule = "一个曾经学习地质,现在学习心理学和脑科学的
 min_text_length = 2 # 与麦麦聊天时麦麦只会回答文本大于等于此数的消息
 max_context_size = 15 # 麦麦获得的上文数量
 emoji_chance = 0.2 # 麦麦使用表情包的概率
+thinking_timeout = 10 # 麦麦思考时间
+
+response_willing_amplifier = 1 # 麦麦回复意愿放大系数，一般为1
+response_interested_rate_amplifier = 1 # 麦麦回复兴趣度放大系数,听到记忆里的内容时放大系数
+down_frequency_rate = 3.5 # 降低回复频率的群组回复意愿降低系数
 ban_words = [
     # "403","张三"
     ]
