--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 3000:3000
       - 3001:3001
       - 6099:6099
-    restart: always
+    restart: unless-stopped
     volumes:
       - napcatQQ:/app/.config/QQ
       - napcatCONFIG:/app/napcat/config
@@ -20,9 +20,11 @@ services:
     container_name: mongodb
     environment:
       - tz=Asia/Shanghai
+      # - MONGO_INITDB_ROOT_USERNAME=your_username
+      # - MONGO_INITDB_ROOT_PASSWORD=your_password
     expose:
       - "27017"
-    restart: always
+    restart: unless-stopped
     volumes:
       - mongodb:/data/db
       - mongodbCONFIG:/data/configdb
@@ -34,7 +36,7 @@ services:
       - tz=Asia/Shanghai
     expose:
       - "8080"
-    restart: always
+    restart: unless-stopped
     depends_on:
       - mongodb
       - napcat
