--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -64,6 +64,13 @@ enable = false # 仅作示例，不会触发
 keywords = ["测试关键词回复","test",""]
 reaction = "回答“测试成功”"
 
+[chinese_typo]
+enable = true # 是否启用中文错别字生成器
+error_rate=0.03 # 单字替换概率
+min_freq=7 # 最小字频阈值
+tone_error_rate=0.2 # 声调错误概率
+word_replace_rate=0.02 # 整词替换概率
+
 [others]
 enable_advance_output = true # 是否启用高级输出
 enable_kuuki_read = true # 是否启用读空气功能
