feat: 增加stable-dev分支的打包

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - debug       # 新增 debug 分支触发
+      - stable-dev
     tags:
       - 'v*'       
   workflow_dispatch: 
