--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "0.0.4"
+version = "0.0.5"
 
 #如果你想要修改配置文件，请在修改后将version的值进行变更
 #如果新增项目，请在BotConfig类下新增相应的变量
@@ -39,6 +39,12 @@ down_frequency_rate = 3.5 # 降低回复频率的群组回复意愿降低系数
 ban_words = [
     # "403","张三"
     ]
+
+ban_words_regex = [
+    # 需要过滤的消息匹配的正则表达式，匹配到的消息将被过滤，若不了解正则表达式请勿修改
+    #"https?://[^\\s]+", # 匹配https链接
+    #"\\d{4}-\\d{2}-\\d{2}", # 匹配日期
+]
 
 [emoji]
 check_interval = 120 # 检查表情包的时间间隔
