fix: 修复docker部署时区指定问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   mongodb:
     container_name: mongodb
     environment:
-      - tz=Asia/Shanghai
+      - TZ=Asia/Shanghai
       # - MONGO_INITDB_ROOT_USERNAME=your_username
       # - MONGO_INITDB_ROOT_PASSWORD=your_password
     expose:
