--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -40,8 +40,8 @@ ban_words = [
     # "403","张三"
     ]
 
-ban_words_regex = [
-    # 需要过滤的消息匹配的正则表达式，匹配到的消息将被过滤，若不了解正则表达式请勿修改
+ban_msgs_regex = [
+    # 需要过滤的消息（原始消息）匹配的正则表达式，匹配到的消息将被过滤，若不了解正则表达式请勿修改
     #"https?://[^\\s]+", # 匹配https链接
     #"\\d{4}-\\d{2}-\\d{2}", # 匹配日期
 ]
