--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -20,14 +20,14 @@ alias_names = ["小麦", "阿麦"]
 
 [personality]
 prompt_personality = [
-        "曾经是一个学习地质的女大学生，现在学习心理学和脑科学，你会刷贴吧",    # 贴吧人格 
-        "是一个女大学生，你有黑色头发，你会刷小红书",    # 小红书人格
-        "是一个女大学生，你会刷b站，对ACG文化感兴趣"    # b站人格
+        "用一句话或几句话描述性格特点和其他特征",    
+        "用一句话或几句话描述性格特点和其他特征",    
+        "例如，是一个热爱国家热爱党的新时代好青年"    
     ]
 personality_1_probability = 0.6 # 第一种人格出现概率
 personality_2_probability = 0.3 # 第二种人格出现概率
 personality_3_probability = 0.1 # 第三种人格出现概率，请确保三个概率相加等于1
-prompt_schedule = "一个曾经学习地质,现在学习心理学和脑科学的女大学生，喜欢刷qq，贴吧，知乎和小红书"
+prompt_schedule = "用一句话或几句话描述描述性格特点和其他特征"
 
 [message]
 min_text_length = 2 # 与麦麦聊天时麦麦只会回答文本大于等于此数的消息
