--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -12,6 +12,23 @@ body:
     - label: "我确认在 Issues 列表中并无其他人已经提出过与此问题相同或相似的问题"
       required: true
     - label: "我使用了 Docker"
+- type: dropdown
+  attributes:
+    label: "使用的分支"
+    description: "请选择您正在使用的版本分支"
+    options:
+      - main
+      - main-fix
+      - refactor
+  validations:
+    required: true
+- type: input
+  attributes:
+    label: "具体版本号"
+    description: "请输入您使用的具体版本号"
+    placeholder: "例如：0.5.11、0.5.8"
+  validations:
+    required: true
 - type: textarea
   attributes:
     label: 遇到的问题
