fix: logger工厂支持环境变量配置日志级别（CR意见）

--- a/template.env
+++ b/template.env
@@ -23,7 +23,13 @@ CHAT_ANY_WHERE_BASE_URL=https://api.chatanywhere.tech/v1
 SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1/
 DEEP_SEEK_BASE_URL=https://api.deepseek.com/v1
 
-#定义你要用的api的key(需要去对应网站申请哦)
+# 定义你要用的api的key(需要去对应网站申请哦)
 DEEP_SEEK_KEY=
 CHAT_ANY_WHERE_KEY=
 SILICONFLOW_KEY=
+
+# 定义日志相关配置
+CONSOLE_LOG_LEVEL=INFO # 自定义日志的默认控制台输出日志级别
+FILE_LOG_LEVEL=DEBUG # 自定义日志的默认文件输出日志级别
+DEFAULT_CONSOLE_LOG_LEVEL=SUCCESS # 原生日志的控制台输出日志级别（nonebot就是这一类）
+DEFAULT_FILE_LOG_LEVEL=DEBUG # 原生日志的默认文件输出日志级别（nonebot就是这一类）
