--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -109,7 +109,7 @@ tone_error_rate=0.2 # 声调错误概率
 word_replace_rate=0.006 # 整词替换概率
 
 [others]
-enable_advance_output = true # 是否启用高级输出
+enable_advance_output = false # 是否启用高级输出
 enable_kuuki_read = true # 是否启用读空气功能
 enable_debug_output = false # 是否启用调试输出
 enable_friend_chat = false # 是否启用好友聊天
