better 更好的llm使用统计

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -128,52 +128,60 @@ enable = true
 
 
 #下面的模型若使用硅基流动则不需要更改，使用ds官方则改成.env.prod自定义的宏，使用自定义模型则选择定位相似的模型自己填写
-#推理模型：
+#推理模型
+
 [model.llm_reasoning] #回复模型1 主要回复模型
 name = "Pro/deepseek-ai/DeepSeek-R1"
+# name = "Qwen/QwQ-32B"
 provider = "SILICONFLOW"
-pri_in = 0 #模型的输入价格（非必填，可以记录消耗）
-pri_out = 0 #模型的输出价格（非必填，可以记录消耗）
+pri_in = 4 #模型的输入价格（非必填，可以记录消耗）
+pri_out = 16 #模型的输出价格（非必填，可以记录消耗）
 
 [model.llm_reasoning_minor] #回复模型3 次要回复模型
 name = "deepseek-ai/DeepSeek-R1-Distill-Qwen-32B"
 provider = "SILICONFLOW"
+pri_in = 1.26 #模型的输入价格（非必填，可以记录消耗）
+pri_out = 1.26 #模型的输出价格（非必填，可以记录消耗）
 
 #非推理模型
 
 [model.llm_normal] #V3 回复模型2 次要回复模型
 name = "Pro/deepseek-ai/DeepSeek-V3"
 provider = "SILICONFLOW"
+pri_in = 2 #模型的输入价格（非必填，可以记录消耗）
+pri_out = 8 #模型的输出价格（非必填，可以记录消耗）
 
-[model.llm_normal_minor] #V2.5
-name = "deepseek-ai/DeepSeek-V2.5"
-provider = "SILICONFLOW"
-
-[model.llm_emotion_judge] #主题判断 0.7/m
+[model.llm_emotion_judge] #表情包判断 
 name = "Qwen/Qwen2.5-14B-Instruct"
 provider = "SILICONFLOW"
+pri_in = 0.7
+pri_out = 0.7
 
-[model.llm_topic_judge] #主题判断：建议使用qwen2.5 7b
+[model.llm_topic_judge] #记忆主题判断：建议使用qwen2.5 7b
 name = "Pro/Qwen/Qwen2.5-7B-Instruct"
 provider = "SILICONFLOW"
+pri_in = 0
+pri_out = 0
 
-[model.llm_summary_by_topic] #建议使用qwen2.5 32b 及以上
+[model.llm_summary_by_topic] #概括模型，建议使用qwen2.5 32b 及以上
 name = "Qwen/Qwen2.5-32B-Instruct"
 provider = "SILICONFLOW"
-pri_in = 0
-pri_out = 0
+pri_in = 1.26
+pri_out = 1.26
 
-[model.moderation] #内容审核 未启用
+[model.moderation] #内容审核，开发中
 name = ""
 provider = "SILICONFLOW"
-pri_in = 0
-pri_out = 0
+pri_in = 1.0
+pri_out = 2.0
 
 # 识图模型
 
-[model.vlm] #图像识别 0.35/m
-name = "Pro/Qwen/Qwen2-VL-7B-Instruct"
+[model.vlm] #图像识别 
+name = "Pro/Qwen/Qwen2.5-VL-7B-Instruct"
 provider = "SILICONFLOW"
+pri_in = 0.35
+pri_out = 0.35
 
 #嵌入模型
 
