--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -140,7 +140,7 @@ enable_friend_chat = false # 是否启用好友聊天
 enable_think_flow = false # 是否启用思维流 注意：可能会消耗大量token，请谨慎开启
 #思维流适合搭配低能耗普通模型使用，例如qwen2.5 32b
 
-#下面的模型若使用硅基流动则不需要更改，使用ds官方则改成.env.prod自定义的宏，使用自定义模型则选择定位相似的模型自己填写
+#下面的模型若使用硅基流动则不需要更改，使用ds官方则改成.env自定义的宏，使用自定义模型则选择定位相似的模型自己填写
 #推理模型
 
 [model.llm_reasoning] #回复模型1 主要回复模型
