--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.0.0"
+version = "1.0.1"
 
 [mai_version]
 version = "0.6.0"
@@ -148,6 +148,12 @@ enable_think_flow = false # 是否启用思维流 注意：可能会消耗大量
 
 #下面的模型若使用硅基流动则不需要更改，使用ds官方则改成.env自定义的宏，使用自定义模型则选择定位相似的模型自己填写
 #推理模型
+
+# 额外字段
+# 下面的模型有以下额外字段可以添加：
+
+# stream = <true|false> : 用于指定模型是否是使用流式输出
+# 如果不指定，则该项是 False
 
 [model.llm_reasoning] #回复模型1 主要回复模型
 name = "Pro/deepseek-ai/DeepSeek-R1"
