ci: 添加 fork 同步 workflow
- 新增 .github/workflows/refactor.yml 文件
- 配置定时任务，每 30 分钟同步一次上游仓库的 refactor 分支
- 使用 tgymnich/fork-sync 动作进行同步
- 设置同步的上游仓库用户为 SengokuCola- 指定同步的上游分支为 refactor，本地分支也为 refactor

--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -9,9 +9,9 @@ jobs:
   repo-sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: TG908/fork-sync@v2.0.10
+      - uses: tgymnich/fork-sync@v2.0.10
         with:
-          github_token: ${{ secrets.PERSONAL_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           owner: SengokuCola # fork 的上游仓库 user
           head: refactor # fork 的上游仓库 branch
           base: refactor # 本地仓库 branch
