--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     ports:
       - "18002:18002"
     volumes:
-      - ./adapters/plugins:/adapters/src/plugins
-      - ./adapters/.env:/adapters/.env
-      - ./data/qq:/app/.config/QQ
+      - ./adapters/plugins:/adapters/src/plugins # 持久化adapters插件
+      - ./adapters/.env:/adapters/.env # 持久化adapters配置文件
+      - ./data/qq:/app/.config/QQ # 持久化QQ本体并同步qq表情和图片到adapters
     restart: always
     networks:
       - maim_bot
@@ -18,15 +18,15 @@ services:
     image: maimbot-core:latest
     environment:
       - TZ=Asia/Shanghai
-#      - EULA_AGREE=35362b6ea30f12891d46ef545122e84a
-#      - PRIVACY_AGREE=2402af06e133d2d10d9c6c643fdc9333
+#      - EULA_AGREE=35362b6ea30f12891d46ef545122e84a  # 同意EULA
+#      - PRIVACY_AGREE=2402af06e133d2d10d9c6c643fdc9333 # 同意EULA
     ports:
       - "8000:8000"
     volumes:
       - ./mmc-data:/MaiMBot/data
-      - ./mmc-config/.env:/MaiMBot/.env
-      - ./mmc-config/bot_config.toml:/MaiMBot/config/bot_config.toml
-      - ./data/MaiMBot:/MaiMBot/data
+      - ./mmc-config/.env:/MaiMBot/.env # 持久化bot配置文件
+      - ./mmc-config/bot_config.toml:/MaiMBot/config/bot_config.toml # 持久化bot配置文件
+      - ./data/MaiMBot:/MaiMBot/data # NapCat 和 NoneBot 共享此卷，否则发送图片会有问题
     restart: always
     networks:
       - maim_bot
@@ -34,12 +34,14 @@ services:
     container_name: maim-bot-mongo
     environment:
       - TZ=Asia/Shanghai
+#      - MONGO_INITDB_ROOT_USERNAME=your_username # 此处配置mongo用户
+#      - MONGO_INITDB_ROOT_PASSWORD=your_password # 此处配置mongo密码
     ports:
       - "27017:27017"
     restart: always
     volumes:
-      - mongodb:/data/db
-      - mongodbCONFIG:/data/configdb
+      - mongodb:/data/db #  持久化mongodb数据
+      - mongodbCONFIG:/data/configdb # 持久化mongodb配置文件
     image: mongo:latest
     networks:
       - maim_bot
@@ -54,9 +56,9 @@ services:
       - "6099:6099"
       - "8095:8095"
     volumes:
-      - ./napcat-config:/app/napcat/config
-      - ./data/qq:/app/.config/QQ
-      - ./data/MaiMBot:/MaiMBot/data
+      - ./napcat-config:/app/napcat/config # 持久化napcat配置文件
+      - ./data/qq:/app/.config/QQ # 持久化QQ本体并同步qq表情和图片到adapters
+      - ./data/MaiMBot:/MaiMBot/data # NapCat 和 NoneBot 共享此卷，否则发送图片会有问题
     container_name: maim-bot-napcat
     restart: always
     image: mlikiowa/napcat-docker:latest
