build(adapters): 更新 Docker镜像版本
- 将 adapters 服务的 Docker 镜像从 sengokucola/maimbot:adapters 修改为 sengokucola/maimbot-adapter:adapter
- 此更新统一了 Docker 镜像的命名格式，确保一致性和清晰性

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   adapters:
     container_name: maim-bot-adapters
-    image: sengokucola/maimbot:adapters
+    image: sengokucola/maimbot-adapter:adapter
     environment:
       - TZ=Asia/Shanghai
     ports:
