--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   adapters:
     container_name: maim-bot-adapters
-    image: sengokucola/maimbot-adapter:adapter
+    image: sengokucola/maimbot-adapter:latest
     environment:
       - TZ=Asia/Shanghai
     ports:
