refactor(infrastructure): 更新 Docker Compose 配置
- 修改 adapters、MaiMBot、mongodb 和 napcat 的数据卷挂载路径
- 统一使用 ./docker-config 目录结构进行配置文件和数据持久化
-移除冗余的配置项，简化配置结构

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "18002:18002"
     volumes:
-      - ./adapters/plugins:/adapters/src/plugins # 持久化adapters插件
-      - ./adapters/.env:/adapters/.env # 持久化adapters配置文件
+      - ./docker-config/adapters/plugins:/adapters/src/plugins # 持久化adapters
+      - ./docker-config/adapters/.env:/adapters/.env # 持久化adapters配置文件
       - ./data/qq:/app/.config/QQ # 持久化QQ本体并同步qq表情和图片到adapters
     restart: always
     depends_on:
@@ -25,9 +25,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./mmc-data:/MaiMBot/data
-      - ./mmc-config/.env:/MaiMBot/.env # 持久化bot配置文件
-      - ./mmc-config/bot_config.toml:/MaiMBot/config/bot_config.toml # 持久化bot配置文件
+      - ./docker-config/mmc/.env:/MaiMBot/.env # 持久化env配置文件
+      - ./docker-config/mmc:/MaiMBot/config # 持久化bot配置文件
       - ./data/MaiMBot:/MaiMBot/data # NapCat 和 NoneBot 共享此卷，否则发送图片会有问题
     restart: always
     depends_on:
@@ -45,7 +44,7 @@ services:
     restart: always
     volumes:
       - mongodb:/data/db #  持久化mongodb数据
-      - mongodbCONFIG:/data/configdb # 持久化mongodb配置文件
+      - ./docker-config/mongodb:/data/configdb # 持久化mongodb配置文件
     image: mongo:latest
     networks:
       - maim_bot
@@ -58,7 +57,7 @@ services:
       - "6099:6099"
       - "8095:8095"
     volumes:
-      - ./napcat-config:/app/napcat/config # 持久化napcat配置文件
+      - ./docker-config/napcat:/app/napcat/config # 持久化napcat配置文件
       - ./data/qq:/app/.config/QQ # 持久化QQ本体并同步qq表情和图片到adapters
       - ./data/MaiMBot:/MaiMBot/data # NapCat 和 NoneBot 共享此卷，否则发送图片会有问题
     container_name: maim-bot-napcat
@@ -71,4 +70,3 @@ networks:
     driver: bridge
 volumes:
   mongodb:
-  mongodbCONFIG:
