vol(mongodb): 修改 MongoDB 配置文件持久化方式
-将本地路径 ./docker-config/mongodb 更改为使用自定义卷 mongodbCONFIG
- 在 volumes 部分添加 mongodbCONFIG 卷的定义

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     restart: always
     volumes:
       - mongodb:/data/db #  持久化mongodb数据
-      - ./docker-config/mongodb:/data/configdb # 持久化mongodb配置文件
+      - mongodbCONFIG:/data/configdb # 持久化mongodb配置文件
     image: mongo:latest
     networks:
       - maim_bot
@@ -70,3 +70,4 @@ networks:
     driver: bridge
 volumes:
   mongodb:
+  mongodbCONFIG:
