--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   adapters:
     container_name: maim-bot-adapters
     image: maple127667/maimbot-adapter:latest
+    # image: infinitycat/maimbot-adapter:latest
     environment:
       - TZ=Asia/Shanghai
     ports:
@@ -18,6 +19,7 @@ services:
   core:
     container_name: maim-bot-core
     image: sengokucola/maimbot:refactor
+    # image: infinitycat/maimbot:refactor
     environment:
       - TZ=Asia/Shanghai
 #      - EULA_AGREE=35362b6ea30f12891d46ef545122e84a  # 同意EULA
