feat: PFC谈话模式，可选择启用，实验性功能

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.0.4"
+version = "1.1.0"
 
 
 #以下是给开发人员阅读的，一般用户不需要阅读
@@ -149,6 +149,7 @@ enable = true
 
 [experimental]
 enable_friend_chat = false # 是否启用好友聊天
+pfc_chatting = false # 是否启用PFC聊天
 
 #下面的模型若使用硅基流动则不需要更改，使用ds官方则改成.env自定义的宏，使用自定义模型则选择定位相似的模型自己填写
 #推理模型
