ci(docker): 更新 Docker镜像构建和推送配置
- 移除仅在 refactor 分支执行的 maim_message 克隆步骤
- 更新分支标签配置:  - main 分支构建 main 和 main-时间戳 标签  - 新增 classical、dev 和 knowledge 分支的构建配置
- 删除 main-fix 和 refactor 分支的特殊处理逻辑

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches:
       - main
-      - main-fix
-      - refactor  # 新增 refactor 分支触发
+      - classical
+      - dev
+      - new_knowledge
     tags:
       - 'v*'
   workflow_dispatch:
@@ -21,7 +22,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Clone maim_message (refactor branch only)
-        if: github.ref == 'refs/heads/refactor'  # 仅 refactor 分支执行
         run: git clone https://github.com/MaiM-with-u/maim_message maim_message
 
       - name: Set up Docker Buildx
@@ -39,11 +39,13 @@ jobs:
           if [[ "${{ github.ref }}" == refs/tags/* ]]; then
             echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:${{ github.ref_name }},${{ secrets.DOCKERHUB_USERNAME }}/maimbot:latest" >> $GITHUB_OUTPUT
           elif [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:main,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:latest" >> $GITHUB_OUTPUT
-          elif [ "${{ github.ref }}" == "refs/heads/main-fix" ]; then
-            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:main-fix" >> $GITHUB_OUTPUT
-          elif [ "${{ github.ref }}" == "refs/heads/refactor" ]; then  # 新增 refactor 分支处理
-            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:refactor,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:refactor$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
+            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:main,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:main-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
+          elif [ "${{ github.ref }}" == "refs/heads/classical" ]; then
+            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:classical,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:classical-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
+          elif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
+            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:dev,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:dev-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
+          elif [ "${{ github.ref }}" == "refs/heads/knowledge" ]; then 
+            echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:knowledge,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:knowledge-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
           fi
 
       - name: Build and Push Docker Image
