ci(docker): 更新 Docker镜像构建和推送配置
- 移除仅在 refactor 分支执行的 maim_message 克隆步骤
- 更新分支标签配置:  - main 分支构建 main 和 main-时间戳 标签  - 新增 classical、dev 和 knowledge 分支的构建配置
- 删除 main-fix 和 refactor 分支的特殊处理逻辑

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Clone maim_message (refactor branch only)
+      - name: Clone maim_message
         run: git clone https://github.com/MaiM-with-u/maim_message maim_message
 
       - name: Set up Docker Buildx
@@ -44,7 +44,7 @@ jobs:
             echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:classical,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:classical-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
           elif [ "${{ github.ref }}" == "refs/heads/dev" ]; then
             echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:dev,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:dev-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
-          elif [ "${{ github.ref }}" == "refs/heads/knowledge" ]; then 
+          elif [ "${{ github.ref }}" == "refs/heads/new_knowledge" ]; then 
             echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/maimbot:knowledge,${{ secrets.DOCKERHUB_USERNAME }}/maimbot:knowledge-$(date -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
           fi
 
