build(docker): 更新 Docker镜像版本
- 将 core 容器的镜像版本从 :latest 改为 :main- 注释掉的镜像版本也从 :latest 改为 :main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       - maim_bot
   core:
     container_name: maim-bot-core
-    image: sengokucola/maimbot:latest
-    # image: infinitycat/maimbot:latest
+    image: sengokucola/maimbot:main
+    # image: infinitycat/maimbot:main
     environment:
       - TZ=Asia/Shanghai
 #      - EULA_AGREE=35362b6ea30f12891d46ef545122e84a  # 同意EULA
