--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ logs/
 nonebot-maibot-adapter/
 *.zip
 run.bat
+run_none.bat
 run.py
 message_queue_content.txt
 message_queue_content.bat
@@ -231,3 +232,5 @@ logs
 .vscode
 
 /config/*
+run_none.bat
+config/old/bot_config_20250405_212257.toml
