--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -105,7 +105,8 @@ response_willing_amplifier = 1 # 麦麦回复意愿放大系数，一般为1
 response_interested_rate_amplifier = 1 # 麦麦回复兴趣度放大系数,听到记忆里的内容时放大系数
 down_frequency_rate = 3 # 降低回复频率的群组回复意愿降低系数 除法
 emoji_response_penalty = 0.1 # 表情包回复惩罚系数，设为0为不回复单个表情包，减少单独回复表情包的概率
-
+metioned_bot_inevitable_reply = false # 提及 bot 必然回复
+at_bot_inevitable_reply = false # @bot 必然回复
 
 [emoji]
 max_emoji_num = 120 # 表情包最大数量
