--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -60,7 +60,7 @@ appearance = "用几句话描述外貌特征" # 外貌特征
 enable_schedule_gen = true # 是否启用日程表(尚未完成)
 prompt_schedule_gen = "用几句话描述描述性格特点或行动规律，这个特征会用来生成日程表"
 schedule_doing_update_interval = 900 # 日程表更新间隔 单位秒
-schedule_temperature = 0.3 # 日程表温度，建议0.3-0.6
+schedule_temperature = 0.2 # 日程表温度，建议0.2-0.5
 time_zone = "Asia/Shanghai" # 给你的机器人设置时区，可以解决运行电脑时区和国内时区不同的情况，或者模拟国外留学生日程
 
 [platforms] # 必填项目，填写每个平台适配器提供的链接
@@ -239,12 +239,11 @@ provider = "SILICONFLOW"
 pri_in = 0
 pri_out = 0
 
-[model.llm_sub_heartflow] #心流：建议使用qwen2.5 7b
-# name = "Pro/Qwen/Qwen2.5-7B-Instruct"
-name = "Qwen/Qwen2.5-32B-Instruct"
+[model.llm_sub_heartflow] #子心流：建议使用V3级别
+name = "Pro/deepseek-ai/DeepSeek-V3"
 provider = "SILICONFLOW"
-pri_in = 1.26
-pri_out = 1.26
+pri_in = 2
+pri_out = 8
 
 [model.llm_heartflow] #心流：建议使用qwen2.5 32b
 # name = "Pro/Qwen/Qwen2.5-7B-Instruct"
