更正log，完善mxp模式

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.2.5"
+version = "1.2.6"
 
 
 #以下是给开发人员阅读的，一般用户不需要阅读
@@ -98,7 +98,7 @@ ban_msgs_regex = [
 ]
 
 [willing]
-willing_mode = "classical" # 回复意愿模式 —— 经典模式：classical，动态模式：dynamic，自定义模式：custom
+willing_mode = "classical" # 回复意愿模式 —— 经典模式：classical，动态模式：dynamic，mxp模式：mxp，自定义模式：custom（需要你自己实现）
 response_willing_amplifier = 1 # 麦麦回复意愿放大系数，一般为1
 response_interested_rate_amplifier = 1 # 麦麦回复兴趣度放大系数,听到记忆里的内容时放大系数
 down_frequency_rate = 3 # 降低回复频率的群组回复意愿降低系数 除法
