--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -6,4 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/ruff-action@v3
+      - run: ruff check --fix
+      - run: ruff format
 
